--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,6 +1,5 @@
 .page {
-    min-width: 320px;
-    max-width: 1280px;
+    width: 100%;
     background-color: #000;
     margin: 0 auto;
     font-family: "Inter", Arial, sans-serif, "Helvetica Neue";
@@ -11,6 +10,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
-    height: 100vh;
+    /*height: 100vh;*/
   }
 
+  /*узнать, можно ли оставить прижатым футер, при этом чтобы весь фон остался черным.*/
