--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -10,6 +10,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
+    min-height: 100vh;
     /*height: 100vh;*/
   }
 
